--- a/.github/workflows/deployed.yml
+++ b/.github/workflows/deployed.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
         with:
@@ -24,3 +24,6 @@ jobs:
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+- name: NPM Install
+  run: npm install dependency # Add your specific npm install command
