--- a/.github/workflows/deployed.yml
+++ b/.github/workflows/deployed.yml
@@ -25,5 +25,5 @@ jobs:
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-- name: NPM Install
-  run: npm install dependency # Add your specific npm install command
+- name: npm Install dependency
+  run: npm install  # Add your specific npm install command
