--- a/.github/workflows/deployed.yml
+++ b/.github/workflows/deployed.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: self-hosted
+    runs-on: ubuntu-ec2
     steps:
       - uses: actions/checkout@v2
         with:
